- Make sure that the Elastic Agent connect over TLS in cloud. {pull}17843[17843]
- Moved stream.* fields to top of event {pull}17858[17858]
- Use /tmp for default monitoring endpoint location for libbeat {pull}18131[18131]
- Use default output by default {pull}18091[18091]
- Fix panic and flaky tests for the Agent. {pull}18135[18135]
- Fix default configuration after enroll {pull}18232[18232]
- Fix make sure the collected logs or metrics include streams information. {pull}18261[18261]
- Fix version to 7.8 {pull}18286[18286]
- Fix an issue where the checkin_frequency, jitter, and backoff options where not configurable. {pull}17843[17843]
- Stop monitoring on config change {pull}18284[18284]
- Fix jq: command not found {pull}18408[18408]

==== New features

- Generate index name in a format type-dataset-namespace {pull}16903[16903]
- OS agnostic default configuration {pull}17016[17016]
- Introduced post install hooks {pull}17241[17241]
- Support for config constraints {pull}17112[17112]
- Introduced `mage demo` command {pull}17312[17312]
- Display the stability of the agent at enroll and start.  {pull}17336[17336]
- Expose stream.* variables in events {pull}17468[17468]
- Monitoring configuration reloadable {pull}17855[17855]
- Pack ECS metadata to request payload send to fleet {pull}17894[17894]
- Allow CLI overrides of paths {pull}17781[17781]
- Enable Filebeat input: S3, Azureeventhub, cloudfoundry, httpjson, netflow, o365audit. {pull}17909[17909]
- Configurable log level {pull}18083[18083]
- Use data subfolder as default for process logs {pull}17960[17960]
- Enable introspecting configuration {pull}18124[18124]
- Follow home path for all config files {pull}18161[18161]
- Do not require unnecessary configuration {pull}18003[18003]
- Use nested objects so fleet can handle metadata correctly {pull}18234[18234]
- Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull}17935[17935]