@@ -136,7 +136,7 @@ func newManaged(
 		log,
 		router,
 		&configModifiers{
-			Decorators: []decoratorFunc{injectMonitoring},
+			Decorators: []decoratorFunc{injectMonitoring, injectPreferV2Template},
 			Filters:    []filterFunc{filters.ConstraintFilter},
 		},
 		monitor,
